# roadai

./: AGENTS.md  Dockerfile  README.md  index.html  pyproject.toml  schema.json
roadai/: __init__.py  cli.py  main.py
roadai/models/: __init__.py  messages.py
roadai/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  router.py
src/roadai/: inference.py
